--- a/index.html
+++ b/index.html
@@ -1,12 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>css-grid-practice</title>
+    <style>
+        a {
+            text-decoration: none;
+            color: #1890ff;
+        }
+    </style>
 </head>
+
 <body>
-    css-grid-practice
+    <p>css-grid-practice</p>
+    <ul>
+        <li>容器属性
+            <ul>
+                <li>
+                    <a href="./1container.html">1. grid 基础属性。</a>
+                </li>
+                <li>
+                    <a href="./1container.html">2. grid-template-areas + grid-area 指定区域布局。</a>
+                </li>
+                <li>
+                    <a href="./3container.html">3. grid-auto-flow 修改行列顺序。</a>
+                </li>
+                <li>
+                    <a href="./4container.html">4. 指定每个网格内容的位置</a>
+                </li>
+                <li>
+                    <a href="./5container.html">5. 指定每个网格的位置。</a>
+                </li>
+                <li>
+                    <a href="./6container.html">6. 指定超出网格外项目的大小。</a>
+                </li>
+            </ul>
+        </li>
+        <li>项目属性
+            <ul>
+                <li>
+                    <a href="./1item.html">1. 网格自定义跨行跨列。</a>
+                </li>
+                <li>
+                    <a href="./2item.html">2. 跨行跨列的简写。</a>
+                </li>
+                <li>
+                    <a href="./3item.html">3. 项目内水平、垂直方向的对齐方式。</a>
+                </li>
+            </ul>
+        </li>
+        <li>常用布局
+            <ul>
+                <li>
+                    <a href="./1layout.html">1. 容器宽度固定/不固定，每行确定个数并平均分配。</a>
+                </li>
+                <li>
+                    <a href="./2layout.html">2. 容器宽度不固定，每列固定宽度自动换行，达到每一行/列，容纳尽可能多的单元格。</a>
+                </li>
+                <li>
+                    <a href="./3layout.html">3. 上中下结构，内容是侧边的倍数。</a>
+                </li>
+                <li>
+                    <a href="./4layout.html">4. 两列表单，特殊列占整行。</a>
+                </li>
+            </ul>
+        </li>
+    </ul>
 </body>
+
 </html>
